Fix spacing for canvas-blocks

--- a/addon/components/canvas-block/styles.css
+++ b/addon/components/canvas-block/styles.css
@@ -1,3 +1,3 @@
-.canvas-block + .canvas-block {
-  margin: 1.5rem 0;
+.canvas-block {
+  margin: 0 0 1.5rem;
 }
